# Solocraft

./: CMakeLists.txt  README.md  SoloCraft.conf.dist.in  solocraftpch.h
solocraft/: SoloCraft.cpp  SoloCraft.h  SoloCraftConfig.cpp  SoloCraftConfig.h
sql/characters/: mod_SoloCraft.sql
src/: SoloCraft.conf.dist.in  SoloCraft.cpp  SoloCraft.h  SoloCraftConfig.cpp  SoloCraftConfig.h  SoloCraftModule.cpp  SoloCraftModule.h  SoloCraftModuleConfig.cpp  SoloCraftModuleConfig.h
